Refactor di commenti e sistemazioni parti duplicate, test continuanano a funzionare. Ora test effettivo e poi in caso merge